# km_adaptive_corpus

./: .gitignore  Cargo.toml  README.md  REUSE.toml
LICENSES/: LicenseRef-shai-iweb.txt
src/: adaptive_corpus.rs  basic_magic.rs  corpus_ext.rs  lib.rs
src/adaptive_corpus/: bigrams.rs  monograms.rs  pentagrams.rs  quadgrams.rs  tests.rs  trigrams.rs
