[package]
name = "km_basic_magic"
version = "0.1.0"
edition = "2024"

[dependencies]
km = { package = "keymeow", git = "https://github.com/antler5/keymeow", branch = "keymui" }
kc = { package = "keycat", path = "../keycat", features = ["serde"] }
rfd = { version = "0.11.4"}
serde_json = "1.0.104"
serde = { version = "1.0.188", features = ["serde_derive"] }
rmp-serde = "1.1.2"
minreq = {version = "2.11.2", features = ["https-rustls", "json-using-serde"] }
